# pre-commit-line-no-commit

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_line_no_commit/: line_no_commit.py
