[metadata]
name = pre_commit_line_no_commit
version = 0.0.1
description = Pre-commit hook to remove lines which are annotated using '# nocommit'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nvn-nil/pre-commit-line-no-commit
author = Naveen Anil (nvn-nil)
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    build-docs = pre_commit_line_no_commit.line_no_commit:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
